Added a2c agents and dqn agents

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
+    "python.pythonPath": "C:\\Users\\Ali Khan\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
     "python.linting.enabled": true
 }
