--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,26 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.jshintrc
